--- a/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
+++ b/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
@@ -138,15 +138,15 @@
     <ClCompile Include="day1\part1\day1_part1_test.cpp" />
     <ClCompile Include="day1\part2\day1_part2.cpp" />
     <ClCompile Include="day1\part2\day1_part2_test.cpp" />
-    <ClCompile Include="day1\read_input.cpp" />
+    <ClCompile Include="day1\read_input_day1.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="day1\part1\day1_part1.h" />
     <ClInclude Include="day1\part2\day1_part2.h" />
-    <ClInclude Include="day1\read_input.h" />
+    <ClInclude Include="day1\read_input_day1.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="day1\input.txt" />
+    <Text Include="day1\input_day1.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
