--- a/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj.filters
+++ b/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="day1\part1\day1_part1_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="day1\read_input.cpp">
+    <ClCompile Include="day1\read_input_day1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="day1\part2\day1_part2.cpp">
@@ -38,7 +38,7 @@
     <ClInclude Include="day1\part1\day1_part1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="day1\read_input.h">
+    <ClInclude Include="day1\read_input_day1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="day1\part2\day1_part2.h">
@@ -46,6 +46,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="day1\input.txt" />
+    <Text Include="day1\input_day1.txt" />
   </ItemGroup>
 </Project>
