- day 3, not optimized yet

--- a/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
+++ b/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
@@ -144,6 +144,11 @@
     <ClCompile Include="day2\part2\day2_part2.cpp" />
     <ClCompile Include="day2\part2\day2_part2_test.cpp" />
     <ClCompile Include="day2\read_input_day2.cpp" />
+    <ClCompile Include="day3\part1\day3_part1.cpp" />
+    <ClCompile Include="day3\part1\day3_part1_test.cpp" />
+    <ClCompile Include="day3\part2\day3_part2.cpp" />
+    <ClCompile Include="day3\part2\day3_part2_test.cpp" />
+    <ClCompile Include="day3\read_input_day3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="day1\part1\day1_part1.h" />
@@ -152,10 +157,14 @@
     <ClInclude Include="day2\part1\day2_part1.h" />
     <ClInclude Include="day2\part2\day2_part2.h" />
     <ClInclude Include="day2\read_input_day2.h" />
+    <ClInclude Include="day3\day3_part1.h" />
+    <ClInclude Include="day3\part2\day3_part2.h" />
+    <ClInclude Include="day3\read_input_day3.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="day1\input_day1.txt" />
     <Text Include="day2\input_day2.txt" />
+    <Text Include="day3\input_day3.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
