finish day4, part1 but very ugly

--- a/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
+++ b/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
@@ -149,6 +149,11 @@
     <ClCompile Include="day3\part2\day3_part2.cpp" />
     <ClCompile Include="day3\part2\day3_part2_test.cpp" />
     <ClCompile Include="day3\read_input_day3.cpp" />
+    <ClCompile Include="day4\part1\day4_part1.cpp" />
+    <ClCompile Include="day4\part1\day4_part1_test.cpp" />
+    <ClCompile Include="day4\part2\day4_part2.cpp" />
+    <ClCompile Include="day4\part2\day4_part2_test.cpp" />
+    <ClCompile Include="day4\read_input_day4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="day1\part1\day1_part1.h" />
@@ -160,11 +165,15 @@
     <ClInclude Include="day3\day3_part1.h" />
     <ClInclude Include="day3\part2\day3_part2.h" />
     <ClInclude Include="day3\read_input_day3.h" />
+    <ClInclude Include="day4\part1\day4_part1.h" />
+    <ClInclude Include="day4\part2\day4_part2.h" />
+    <ClInclude Include="day4\read_input_day4.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="day1\input_day1.txt" />
     <Text Include="day2\input_day2.txt" />
     <Text Include="day3\input_day3.txt" />
+    <Text Include="day4\input_day4.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
