--- a/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj.filters
+++ b/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj.filters
@@ -78,6 +78,21 @@
     <ClCompile Include="day4\read_input_day4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="day5\part1\day5_part1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day5\part1\day5_part1_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day5\part2\day5_part2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day5\part2\day5_part2_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day5\read_input_day5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="day1\part1\day1_part1.h">
@@ -116,11 +131,22 @@
     <ClInclude Include="day4\read_input_day4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="day5\part1\day5_part1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="day5\part2\day5_part2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="day5\read_input_day5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="day1\input_day1.txt" />
     <Text Include="day2\input_day2.txt" />
     <Text Include="day3\input_day3.txt" />
     <Text Include="day4\input_day4.txt" />
+    <Text Include="day5\input_day5_1.txt" />
+    <Text Include="day5\input_day5_2.txt" />
   </ItemGroup>
 </Project>
