--- a/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
+++ b/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
@@ -159,6 +159,11 @@
     <ClCompile Include="day5\part2\day5_part2.cpp" />
     <ClCompile Include="day5\part2\day5_part2_test.cpp" />
     <ClCompile Include="day5\read_input_day5.cpp" />
+    <ClCompile Include="day6\part1\day6_part1.cpp" />
+    <ClCompile Include="day6\part1\day6_part1_test.cpp" />
+    <ClCompile Include="day6\part2\day6_part2.cpp" />
+    <ClCompile Include="day6\part2\day6_part2_test.cpp" />
+    <ClCompile Include="day6\read_input_day6.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="day1\part1\day1_part1.h" />
@@ -176,6 +181,9 @@
     <ClInclude Include="day5\part1\day5_part1.h" />
     <ClInclude Include="day5\part2\day5_part2.h" />
     <ClInclude Include="day5\read_input_day5.h" />
+    <ClInclude Include="day6\part1\day6_part1.h" />
+    <ClInclude Include="day6\part2\day6_part2.h" />
+    <ClInclude Include="day6\read_input_day6.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="day1\input_day1.txt" />
@@ -184,6 +192,7 @@
     <Text Include="day4\input_day4.txt" />
     <Text Include="day5\input_day5_1.txt" />
     <Text Include="day5\input_day5_2.txt" />
+    <Text Include="day6\input_day6.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
