--- a/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj.filters
+++ b/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj.filters
@@ -111,6 +111,21 @@
     <ClCompile Include="day6\utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="day7\part1\day7_part1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day7\part1\day7_part1_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day7\part2\day7_part2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day7\part2\day7_part2_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day7\read_input_day7.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="day1\part1\day1_part1.h">
@@ -170,6 +185,18 @@
     <ClInclude Include="day6\utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="day7\part1\day7_part1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="day7\part2\day7_part2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="day7\read_input_day7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="day7\calibration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="day1\input_day1.txt" />
@@ -179,5 +206,6 @@
     <Text Include="day5\input_day5_1.txt" />
     <Text Include="day5\input_day5_2.txt" />
     <Text Include="day6\input_day6.txt" />
+    <Text Include="day7\input_day7.txt" />
   </ItemGroup>
 </Project>
