--- a/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
+++ b/AdventOfCode2024/AdventOfCode2024/AdventOfCode2024.vcxproj
@@ -175,6 +175,11 @@
     <ClCompile Include="day8\part2\day8_part2.cpp" />
     <ClCompile Include="day8\part2\day8_part2_test.cpp" />
     <ClCompile Include="day8\read_input_day8.cpp" />
+    <ClCompile Include="day9\part1\day9_part1.cpp" />
+    <ClCompile Include="day9\part1\day9_part1_test.cpp" />
+    <ClCompile Include="day9\part2\day9_part2.cpp" />
+    <ClCompile Include="day9\part2\day9_part2_test.cpp" />
+    <ClCompile Include="day9\read_input_day9.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="day1\part1\day1_part1.h" />
@@ -203,6 +208,9 @@
     <ClInclude Include="day8\part1\day8_part1.h" />
     <ClInclude Include="day8\part2\day8_part2.h" />
     <ClInclude Include="day8\read_input_day8.h" />
+    <ClInclude Include="day9\part1\day9_part1.h" />
+    <ClInclude Include="day9\part2\day9_part2.h" />
+    <ClInclude Include="day9\read_input_day9.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="day1\input_day1.txt" />
@@ -214,6 +222,7 @@
     <Text Include="day6\input_day6.txt" />
     <Text Include="day7\input_day7.txt" />
     <Text Include="day8\input_day8.txt" />
+    <Text Include="day9\input_day9.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
